fix eas card styling - buttons shifting TM-3355

--- a/src/sass/_employeeSearch.scss
+++ b/src/sass/_employeeSearch.scss
@@ -197,10 +197,10 @@
     border-top: 11px solid $primary-blue;
     display: flex;
     flex-direction: column;
-    height: 335px;
+    height: 385px;
     margin-bottom: 25px;
     margin-right: 40px;
-    width: 335px;
+    width: 355px;
 
     a {
       display: inline-block;
@@ -221,7 +221,8 @@
     }
 
     .employee-agenda-card-inner {
-      padding: 16px;
+      padding-right: 16px;
+      padding-top: 16px;
 
       .employee-agenda-card-top {
         position: relative;
@@ -237,24 +238,28 @@
           }
         }
       }
-
-      .employee-agenda-card-data-point-top {
-        margin-bottom: 4rem;
-        margin-top: .5rem;
-      }
     }
 
-    .employee-card-data-point {
-      align-items: center;
+    .employee-agenda-card-data-point-top {
       display: flex;
-      margin-bottom: 5px;
+      flex: 5;
+      flex-direction: column;
+      justify-content: space-between;
+      padding-bottom: 16px;
+      padding-left: 16px;
 
-      .fa {
-        padding-right: 6px;
-      }
+      .employee-card-data-point {
+        align-items: center;
+        display: flex;
+        margin-bottom: 5px;
 
-      .org-fa-arrow {
-        padding: 0 9px;
+        .fa {
+          padding-right: 6px;
+        }
+
+        .org-fa-arrow {
+          padding: 0 9px;
+        }
       }
     }
 
@@ -264,7 +269,7 @@
 
       > div {
         display: flex;
-        padding: 10px 16px 0;
+        padding: 10px 27px 20px;
       }
 
       .button-container {
